reformating code and added the logitech k360 string identifier as this does not have the keyword "keyb" in it.

--- a/dvorak@.service
+++ b/dvorak@.service
@@ -2,7 +2,7 @@
 Description=Dvorak Virtual Keyboard
 
 [Service]
-ExecStart=/usr/bin/dvorak /dev/input/%i keyb
+ExecStart=/usr/bin/dvorak /dev/input/%i keyb k360
 
 [Install]
 WantedBy=multi-user.target
