added support for logitch unifying receivers

--- a/dvorak@.service
+++ b/dvorak@.service
@@ -2,7 +2,7 @@
 Description=Dvorak Virtual Keyboard
 
 [Service]
-ExecStart=/usr/bin/dvorak /dev/input/%i keyb k360
+ExecStart=/usr/bin/dvorak /dev/input/%i keyb k360 unifying
 
 [Install]
 WantedBy=multi-user.target
