Implemented #11, trying to run the service for graphical target

--- a/dvorak@.service
+++ b/dvorak@.service
@@ -5,4 +5,4 @@ Description=Dvorak Virtual Keyboard
 ExecStart=/usr/bin/dvorak /dev/input/%i keyb k360 k750
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=graphical.target
