--- a/dvorak@.service
+++ b/dvorak@.service
@@ -2,7 +2,7 @@
 Description=Dvorak Virtual Keyboard
 
 [Service]
-ExecStart=/usr/local/bin/dvorak -d /dev/input/%i -m "keyb k360 k750" -u
+ExecStart=/usr/local/bin/dvorak -d /dev/input/%i -m "keyb k360 k750"
 
 [Install]
 WantedBy=graphical.target
