When a mouse advertizes buttons as with game mouse, then we also map REL/ABS

--- a/dvorak@.service
+++ b/dvorak@.service
@@ -3,3 +3,5 @@ Description=Dvorak Virtual Keyboard
 
 [Service]
 ExecStart=/usr/local/bin/dvorak -d /dev/input/%i
+StandardOutput=null
+StandardError=journal
